# gmail-draft-creator

./: .gitignore  CHANGELOG.md  main.py  pyproject.toml  readme.md  test.py
.github/: build_and_publish.yml
.github/workflows/: build_and_publish.yml
gmail_draft_creator/: __init__.py
