[tool.poetry]
name = "my_gmail_project"
version = "0.1.0"
description = "Create draft messages in Gmail"
authors = ["Your Name <your_email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client = "^2.21.0"
python-decouple = "^3.5"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.6"
click = "^8.1.3"
markdown = "^3.4.3"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
